--- a/frameworks/simulator/ability_simulator/BUILD.gn
+++ b/frameworks/simulator/ability_simulator/BUILD.gn
@@ -56,7 +56,9 @@ ohos_shared_library("ability_simulator") {
     cflags = [ "-std=c++17" ]
 
     include_dirs = [
+      "${ability_runtime_path}/interfaces/kits/native/ability/native/ability_business_error",
       "${ability_runtime_native_path}/runtime",
+      "${ability_runtime_innerkits_path}/ability_manager/include",
       "${ability_runtime_innerkits_path}/runtime/include",
       "${windowmanager_path}/previewer/include",
       "${windowmanager_path}/previewer/mock",
@@ -68,6 +70,7 @@ ohos_shared_library("ability_simulator") {
     ]
 
     sources = [
+      "${ability_runtime_native_path}/ability/native/ability_business_error/ability_business_error.cpp",
       "${ability_runtime_native_path}/runtime/js_module_searcher.cpp",
       "src/ability_context.cpp",
       "src/ability_stage_context.cpp",
