--- a/test/unittest/ability_manager_service_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_test/BUILD.gn
@@ -25,6 +25,7 @@ ohos_unittest("ability_manager_service_test") {
     "${ability_runtime_path}/interfaces/inner_api/ability_manager/include",
     "${ability_runtime_test_path}/mock/ability_manager_collaborator",
     "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include",
+    "${ability_runtime_test_path}/mock/prepare_terminate_callback",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/aakit/include",
     "mock/include",
   ]
