--- a/interfaces/inner_api/runtime/BUILD.gn
+++ b/interfaces/inner_api/runtime/BUILD.gn
@@ -89,7 +89,6 @@ ohos_shared_library("runtime") {
     "ability_base:string_utils",
     "ability_base:want",
     "access_token:libaccesstoken_sdk",
-    "ace_engine:ace_forward_compatibility",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "bundle_framework:bundle_napi_common",
@@ -107,8 +106,9 @@ ohos_shared_library("runtime") {
     "samgr:samgr_proxy",
   ]
 
+  defines = []
   if (is_standard_system) {
-    defines = [ "ENABLE_HITRACE" ]
+    defines += [ "ENABLE_HITRACE" ]
     external_deps += [
       "hitrace:libhitracechain",
       "init:libbegetutil",
@@ -117,9 +117,11 @@ ohos_shared_library("runtime") {
 
   if (ability_runtime_graphics) {
     external_deps += [
+      "ace_engine:ace_forward_compatibility",
       "ace_engine:ace_uicontent",
       "napi:ace_container_scope",
     ]
+    defines += [ "SUPPORT_GRAPHICS" ]
   }
 
   innerapi_tags = [ "platformsdk" ]
