--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -378,6 +378,7 @@ group("unittest") {
     "dummy_values_bucket_test:unittest",
     "event_report_test:unittest",
     "extension_config_mgr_test:unittest",
+    "extension_manager_client_test:unittest",
     "fault_data:unittest",
     "file_path_utils_test:unittest",
     "form_extension_context_test:unittest",
